--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,17 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.893.0",
     "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "sharp": "^0.34.4"
   }
 }
